Fix fdo#38207 and also hide another option in Writer/Web